# simfs

./: .gitignore  CMakeLists.txt  README.md  README_CONFIG.md  example_config.toml  test_readdir.cpp  test_standalone.cpp
.claude/: settings.local.json
include/: db_manager.h  llm_client.h  simfs.h
src/: db_manager.cpp  llm_client.cpp  main.cpp  simfs.cpp
tests/: test_db_manager.cpp  test_llm_client.cpp  test_simfs_integration.cpp
